# UKKKK

./: CONTRIBUTING.md  DIRECTORY_MAP.md  README.md  pyproject.toml  서울시_출산정책_대시보드_기획서.md
data/: 201_DT_201004_B040001_20260720152953.txt  classified_policy.csv  dashboard_summary.json  상상대로+서울+자유제안+정보.xls  출산정책관련 업무담당.xlsx  합계출산율+및+모의+연령별+출산율_20260720153003.csv
data/final/: civil_requests.json  civil_requests_all.csv  civil_requests_all.json  dashboard_stats.json  proposals.json  (+2 more)
docs/: DEVELOPMENT_LOG.md  SYSTEM_DESIGN_PRD.md  근거자료_브리프.md  내일회의_문제정의_점검체크리스트.md  데이터분석정의서.docx  데이터분석정의서.md  데이터분석정의서_템플릿.md  미니프로젝트2_로드맵.txt  보고서_및_발표_진행가이드.md  서울시_출산정책_대시보드_기획서.md  역할분담_및_일정가이드.md  작업_인계_2026-07-23.md
frontend/: README.md  index.html  metadata.json  vite.config.ts
scripts/: 01_collect_birth_policy_proposals.py  01_collect_proposals.py  02_scrape_details.py  02b_merge_parts.py  02c_scrape_additional.py  04_build_dashboard_json.py  05_collect_nationwide_proposals.py  05_fast_test.py  06_build_department_ranking.py  06_test_2025_api.py  clean_civil_titles_and_contents.py  convert_civil_json_to_csv.py  convert_news_to_json.py  crawl_naver_news_by_all_categories.py  enrich_civil_requests.py  fetch_all_civil_details.py  fetch_kosis_birth_stats.py  fetch_naver_news_live.py  fetch_real_proposal_contents.py  reassign_proposal_districts.py  recrawl_all_by_sn_fast.py  repopulate_all_proposal_contents.py  strip_gnb_header_noise.py  update_district_births_to_2025.py  update_script.py
정책/: 03_classify.py  04_classify.py  category_keywords.py  department_keywords.py
(+125 files in other folders)
