[project]
name = "ukkkk"
version = "0.1.0"
description = "서울시 출산·양육 정책 수요 분석 대시보드 및 NLP 분석 데이터 파이프라인"
authors = [
    {name = "UKKKK Team"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.2.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
